# cloud_py_api

./: .codecov.yml  .gitattributes  .gitignore  .l10nignore  .nextcloudignore  .php-cs-fixer.dist.php  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  composer.json  jest.config.js  package-lock.json  package.json  psalm.xml  pyproject.toml  setup.cfg  setup.py  webpack.config.js  webpack.js
.github/: CONTRIBUTING.md  FUNDING.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  question.md  security.md
.github/workflows/: create-release-draft.yml  lint.yml  nightly-build.yml  publish-appstore.yml  py-standalone-create.yml  py_analysis-coverage.yml  py_publish-test-pypi.yml  py_publish.yml  pyfrm-install-test.yml  pypi-create-publish.yaml  stale.yml  static-analysis.yml  test-py-pyfrm-basic.yml  test-pyfrm-basic.yml  test.yml  tests-docker.yml  tests.yml
.tx/: config
appinfo/: config.sample.php  info.xml  routes.php
docs/: requirements.txt
docs/source/: conf.py  index.rst  usage.rst
js/: cloud_py_api-configuration.js  cloud_py_api-configuration.js.LICENSE.txt  cloud_py_api-configuration.js.map  cloud_py_api-main.js  cloud_py_api-main.js.LICENSE.txt  cloud_py_api-main.js.map  cloud_py_api-src_CloudPyAPI_vue.js  cloud_py_api-src_CloudPyAPI_vue.js.map  cloud_py_api-src_views_AppConfiguration_vue.js  cloud_py_api-src_views_AppConfiguration_vue.js.map  cloud_py_api-src_views_Configuration_vue.js  cloud_py_api-src_views_Configuration_vue.js.map  cloud_py_api-vendors-node_modules_nextcloud_axios_dist_index_js.js  cloud_py_api-vendors-node_modules_nextcloud_axios_dist_index_js.js.map  cloud_py_api-vendors-node_modules_nextcloud_vue_dist_Components_AppContent_js-node_modules_nextcloud_vue_d-f24a16.js  cloud_py_api-vendors-node_modules_nextcloud_vue_dist_Components_AppContent_js-node_modules_nextcloud_vue_d-f24a16.js.map
l10n/: ar.js  ar.json  ast.js  ast.json  az.js  az.json  be.js  be.json  bg.js  bg.json  bn_BD.js  bn_BD.json  br.js  br.json  ca.js  ca.json  cs.js  cs.json  cy_GB.js  cy_GB.json  da.js  da.json  de.js  de.json  de_DE.js  de_DE.json  el.js  el.json  en_GB.js  en_GB.json  eo.js  eo.json  es.js  es.json  es_CO.json  es_DO.json  es_EC.js  es_EC.json  es_GT.json  es_PE.js  (+110 more)
lib/AppInfo/: Application.php
lib/Command/: FrameworkCheckCommand.php  FrameworkInstallCommand.php  GetFileContentsCommand.php  RunGrpcBgServerCommand.php  RunGrpcClientAppCheckCommand.php  RunGrpcClientCommand.php  RunGrpcClientDbCursorCommand.php  RunGrpcClientDbExecCommand.php  RunGrpcClientDbSelectCommand.php  RunGrpcClientFsCreateCommand.php  RunGrpcClientFsDeleteCommand.php  RunGrpcClientFsInfoCommand.php  RunGrpcClientFsListCommand.php  RunGrpcClientFsMoveCommand.php  RunGrpcClientFsReadCommand.php  RunGrpcClientFsWriteCommand.php  RunGrpcClientOccCallCommand.php  RunGrpcClientTaskExitCommand.php  RunGrpcClientTaskInitCommand.php  RunGrpcServerCommand.php  (+5 more)
nc_py_api/: .pylintrc  CHANGELOG.md  MANIFEST.in  README.md  __init__.py  _version.py  cloud_api.py  config.py  db_api.py  db_connectors.py  db_misc.py  db_requests.py  files.py  fs.py  fs_api.py  log.py  log_lvl.py  mimetype.py  occ.py  requirements.txt  setup.py  signal_handler.py  users.py
proto/: build.txt  build_py.sh  core.proto  db.proto  fs.proto  install_app.proto  service.proto
pyfrm/: _srv_example.py  core_pb2.py  core_pb2_grpc.py  core_proto.py  exceptions.py  helpers.py  install.py  install_app.py  main.py  nc_pyfrm.py  pyfrm.py  pyproject.toml
pyfrm/py_proto/: core_pb2.py  db_pb2.py  fs_pb2.py  install_app_pb2.py  service_pb2.py  service_pb2_grpc.py
pyfrm_lib/: helpers.py  pp_proto.py  pp_transport.py
src/: CloudPyAPI.vue  main-configuration.js  main.js
templates/: admin.php  configuration.php
tests/: bootstrap.php  phpunit.integration.xml  phpunit.unit.xml  psalm-baseline.xml
(+647 files in other folders)
