[build-system]
requires = ["flit_core >=3.2,<4", "sphinxcontrib-phpdomain"]
build-backend = "flit_core.buildapi"

[project]
name = "cloud_py_api"
authors = [
    {name = "Alexander Piskun", email = "bigcat88@icloud.com"},
    {name = "Andrey Borysenko", email = "andrey18106x@gmail.com"},
]
dynamic = ["version", "description"]