[metadata]
name = nc_py_api
description = Backend API for Python 3.9+ to work with Nextcloud
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cloud-py-api/cloud-py-api
author = Alexander Piskun
author_email = bigcat88@users.noreply.github.com
keywords = nextcloud, api, framework
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
license = Apache License 3.0
project_urls =
    Source=https://github.com/cloud-py-api/cloud-py-api

[options]
python_requires = >=3.9
zip_safe = False
packages = find:
install_requires =
    pg8000
    pymysql

[flake8]
max-line-length = 120
target-version = ["py39"]
ignore =
    E203,
    W503,
per-file-ignores =
    __init__.py: F401, F403
