[build-system]
requires = [
    "pipdeptree >= 2.2.1",
    "nc_py_api >= 0.0.4",
    "pg8000 >= 1.24.0",
    "cryptography",
    "PyNaCl >= 1.4.0",
    "PyMySQL >= 1.0.2",
    "SQLAlchemy == 1.4.31",
    "requirements >= 0.5.0",
    "protobuf >= 3.19.4",
    "grpcio >= 1.43.0"
]
#build-backend = "setuptools.build_meta"
#
#[metadata]

#[tool.coverage.run]
#cover_pylib = true
#include = ["*/pillow_heif/*"]
#omit = ["*/tests/*"]
#
#[tool.coverage.report]
#exclude_lines = [
#    "pragma: no cover",
#    "raise NotImplementedError",
#    "DeprecationWarning"
#]

#[project]
#name = "cloud-py-frm"
#requires-python = ">=3.7.1"

[tool.black]
line-length = 120
target-versions = ["py37"]
include = '\.pyi?$'

#[tool.mypy]
#ignore_missing_imports = true
#allow_redefinition = true
#warn_no_return = true
#strict_optional = true

#[tool.pytest.ini_options]
#minversion = "6.0"
#testpaths = [
#    "tests",
#]
#addopts = "--ignore=memory_leaks.py"
